# 100-exercises-to-learn-rust

exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/02_basic_calculator/10_as_casting/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/03_modules/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/09_heap/src/: lib.rs
exercises/03_ticket_v1/10_references_in_memory/src/: lib.rs
exercises/03_ticket_v1/11_destructor/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/03_operator_overloading/src/: lib.rs
exercises/04_traits/09_from/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/01_enum/src/: lib.rs
exercises/05_ticket_v2/02_match/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/05_nullability/src/: lib.rs
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: data.rs  lib.rs  main.rs  store.rs
helpers/ticket_fields/: Cargo.toml
helpers/ticket_fields/src/: description.rs  title.rs
(+39 files in other folders)
